# noglobal-magic

./: README.md  demo-warn.ipynb  demo.ipynb  pyproject.toml
.github/workflows/: pypi-upload.yml  testing.yml
noglobal_magic/: __init__.py  core.py
scripts/: test.sh
tests/: conftest.py  test_magic.py
