[tool.poetry]
name = "noglobal-magic"
version = "0.1.1"
description = "magic command for prohibit using global variables in Jupyter Notebook"
authors = ["tokusumi <tksmtoms@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tokusumi/noglobal-magic"
include = [
    "LICENSE",
]
keywords = ["jupyter-notebook"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = ">=3.6"
pyflakes = ">=2"
ipython = ">=5.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
mypy = "^0.790"
flake8 = "^3.8.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
